--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -126,7 +126,7 @@ input[type="checkbox"] {
   box-shadow: 0 1px 5px #000;
   outline: none;
   border-radius: 3px;
-  position: absolute;
+  position: fixed;
   z-index: 9999;
   width: 70%;
   background: white;
