--- a/skyfolk/static/css/core.css
+++ b/skyfolk/static/css/core.css
@@ -504,7 +504,7 @@ textarea:focus {
   display: inline-block; }
 
 .nav-wrapper .button-right-notify > span {
-  background-color: tomato;
+  background-color: #f44336;
   font-size: 10px;
   padding: 5px 5px;
   line-height: 10px;
@@ -512,5 +512,53 @@ textarea:focus {
   border-radius: 10px 100% 100% 100%;
   display: inline-block;
   color: white; }
+
+ul#vertical-menu .userView {
+  overflow: hidden;
+  position: relative;
+  padding: 32px 32px 0;
+  margin-bottom: 8px; }
+  ul#vertical-menu .userView a {
+    height: auto;
+    padding: 0; }
+ul#vertical-menu a {
+  color: rgba(0, 0, 0, 0.87);
+  font-size: 14px;
+  font-weight: 600; }
+ul#vertical-menu li {
+  float: none;
+  padding: 0;
+  line-height: 64px; }
+  ul#vertical-menu li:not(:first-child) a {
+    height: 48px;
+    line-height: 48px; }
+  ul#vertical-menu li:nth-child(1):hover {
+    background-color: transparent; }
+  ul#vertical-menu li:hover > a {
+    color: #1e88e5; }
+    ul#vertical-menu li:hover > a > i {
+      color: #1e88e5 !important; }
+  ul#vertical-menu li > a > i, ul#vertical-menu li > a > [class^="mdi-"], ul#vertical-menu li > a > [class*="mdi-"], ul#vertical-menu li > a > i.material-icons {
+    color: rgba(0, 0, 0, 0.54);
+    float: left;
+    line-height: 48px;
+    margin: 0 42px 0 0;
+    width: 14px; }
+ul#vertical-menu .userView a img {
+  border-radius: 3px;
+  display: block; }
+
+.side-nav .userView .name, .side-nav .userView .email {
+  display: block; }
+
+ul#vertical-menu .userView .background {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1; }
 
 /*# sourceMappingURL=core.css.map */
