--- a/skyfolk/static/css/gallery.css
+++ b/skyfolk/static/css/gallery.css
@@ -3,69 +3,62 @@ html, body {
   font-family: "Open Sans", sans-serif !important;
   font-size: 11.5px !important; }
 
-@media only screen and (min-width: 1220px) {
-  .container-gallery > .container-image {
-    margin-left: 2.81%; } }
-.wrapper {
-  padding: 10px;
-  margin-top: 1.3%; }
-  .wrapper .upload_form {
-    width: 55%;
-    background: #fff;
-    padding: 1em;
-    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
-    overflow: hidden;
-    position: fixed;
-    margin: -100px auto 0 auto;
-    top: 50%;
-    right: 0;
-    left: 0;
-    z-index: 9999;
-    display: none; }
-    .wrapper .upload_form input[type="submit"] {
-      border: medium none;
-      border-radius: 2px;
-      display: inline-block;
-      height: 36px;
-      line-height: 36px;
-      padding: 0 2rem;
-      text-transform: uppercase;
-      vertical-align: middle;
-      text-decoration: none;
-      color: #1e88e5;
-      background-color: transparent;
-      text-align: center;
-      letter-spacing: 0.5px;
-      transition: all 0.2s ease-out 0s;
-      cursor: pointer;
-      float: right;
-      outline: none; }
+.container .upload_form {
+  width: 55%;
+  background: #fff;
+  padding: 1em;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
+  overflow: hidden;
+  position: fixed;
+  margin: -100px auto 0 auto;
+  top: 50%;
+  right: 0;
+  left: 0;
+  z-index: 9999;
+  display: none; }
+  .container .upload_form input[type="submit"] {
+    border: medium none;
+    border-radius: 2px;
+    display: inline-block;
+    height: 36px;
+    line-height: 36px;
+    padding: 0 2rem;
+    text-transform: uppercase;
+    vertical-align: middle;
+    text-decoration: none;
+    color: #1e88e5;
+    background-color: transparent;
+    text-align: center;
+    letter-spacing: 0.5px;
+    transition: all 0.2s ease-out 0s;
+    cursor: pointer;
+    float: right;
+    outline: none; }
 
-.container-gallery {
-  margin-top: 1.7%; }
-  .container-gallery .btn-upload-photo {
-    display: block;
-    border: none;
-    background-color: rgba(30, 136, 229, 0.4);
-    color: #ecf0f1;
-    margin: 0 auto 1% auto;
-    border-radius: 100%;
-    padding: 10px;
-    width: 50px;
-    height: 50px;
-    font-size: 1.5em;
-    transition: all 0.1s ease-in-out;
-    outline: none;
-    cursor: pointer; }
-    .container-gallery .btn-upload-photo:hover {
-      background-color: #1e88e5; }
+.container-gallery .btn-upload-photo {
+  display: block;
+  border: none;
+  background-color: rgba(30, 136, 229, 0.4);
+  color: #ecf0f1;
+  margin: 0 auto 1% auto;
+  border-radius: 100%;
+  padding: 10px;
+  width: 50px;
+  height: 50px;
+  font-size: 1.5em;
+  transition: all 0.1s ease-in-out;
+  outline: none;
+  cursor: pointer; }
+  .container-gallery .btn-upload-photo:hover {
+    background-color: #1e88e5; }
+
+.image-div {
+  margin-bottom: 2.5%; }
 
 .container-image {
   background-color: #ffffff;
   height: 400px;
-  padding: 10px;
   border-radius: 3px;
-  margin-bottom: 2.5%;
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15); }
   .container-image .principal-content {
     display: block;
