--- a/skyfolk/static/css/profile.css
+++ b/skyfolk/static/css/profile.css
@@ -911,8 +911,8 @@ ul.table > li {
   transform: rotate(15deg) scale(1.3); }
 
 .info-paw {
-  right: 0;
-  left: 0;
+  right: 0 !important;
+  left: 0 !important;
   top: 30%;
   display: none;
   height: auto;
