--- a/skyfolk/static/sass/gallery.sass
+++ b/skyfolk/static/sass/gallery.sass
@@ -10,13 +10,7 @@ html, body
   font-family: "Open Sans",sans-serif !important
   font-size: 11.5px !important
 
-@media only screen and (min-width: 1220px)
-  .container-gallery > .container-image
-    margin-left: 2.81%
-
-.wrapper
-  padding: 10px
-  margin-top: 1.3%
+.container
   & .upload_form
     width: 55%
     background: #fff
@@ -50,7 +44,6 @@ html, body
       outline: none
 
 .container-gallery
-  margin-top: 1.7%
   & .btn-upload-photo
     display: block
     border: none
@@ -67,12 +60,12 @@ html, body
     cursor: pointer
     &:hover
       background-color: rgba(30, 136, 229, 1)
+.image-div
+  margin-bottom: 2.5%
 .container-image
   background-color: $whitecolor
   height: 400px
-  padding: 10px
   border-radius: 3px
-  margin-bottom: 2.5%
   box-shadow: $boxshadow
   & .principal-content
     display: block
