--- a/skyfolk/templates/account/base-header.html
+++ b/skyfolk/templates/account/base-header.html
@@ -40,7 +40,7 @@
     <nav>
       <div class="nav-wrapper white z-depth-1">
           <a href="/profile/{{ request.user }}/" class="brand-logo center logotipo_skyfolk"><span>S</span>kyfolk</a>
-          <a data-activates="mobile-menu" class="btn-flat left button-menu-left blue-text text-darken-1"><i class="material-icons">menu</i></a>
+          <a data-activates="vertical-menu" class="btn-flat left button-menu-left blue-text text-darken-1"><i class="material-icons">menu</i></a>
           {% include "account/menu-horizontal.html" %}
           <a data-activates="notification-menu" class="right button-right-notify btn-flat"><i class="material-icons">notifications</i><span id="live_notify_badge">0</span></a>
       </div>
