--- a/skyfolk/templates/account/followers.html
+++ b/skyfolk/templates/account/followers.html
@@ -11,34 +11,38 @@
 {% endblock %}
 {% block content %}
 <div class="container">
-<div class="col-lg-12 col-md-10 col-sm-12 container-responsive">
-{% for item in friends_top4 %}
-<div class="col-lg-3 col-md-10 col-sm-12">
-    <div class="personal-card">
-        <div class="col-lg-12">
-            <div class="header">
-               {% if item.user__profile__backImage and item.user__profile__backImage|file_exists %}
-                   <img class="back-profile-user" src="{{ MEDIA_URL }}{{ item.user__profile__backImage }}">
-                   {% else %}
-                   <img class="back-profile-user" src="{{ STATIC_URL }}img/nuevo_back.png">
-                {% endif %}
-                <i class="fa fa-user fa-2x like-him">
-                </i>
-                <div class="bg-user">
-                     <div onclick="location.href='/profile/{{ item.user__username }}'" class="profile-user-bg">{% avatar item.user__username %}</div>
+    <div class="row">
+        <div class="col l12 m10 s12 container-responsive">
+            <div class="row">
+            {% for item in friends_top4 %}
+            <div class="col l3 m10 s12">
+                <div class="personal-card">
+                    <div class="col l12">
+                        <div class="header">
+                           {% if item.user__profile__backImage and item.user__profile__backImage|file_exists %}
+                               <img class="back-profile-user" src="{{ MEDIA_URL }}{{ item.user__profile__backImage }}">
+                               {% else %}
+                               <img class="back-profile-user" src="{{ STATIC_URL }}img/nuevo_back.png">
+                            {% endif %}
+                            <i class="fa fa-user fa-2x like-him">
+                            </i>
+                            <div class="bg-user">
+                                 <div onclick="location.href='/profile/{{ item.user__username }}'" class="profile-user-bg">{% avatar item.user__username %}</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col l12">
+                        <div class="name-friend">
+                        <a href="/profile/{{ item.user__username }}">@{{ item.user__username }} </a><br><br>
+                            <p>{{ item.user__first_name }} {{item.user__last_name}}</p>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col-lg-12">
-            <div class="name-friend">
-            <a href="/profile/{{ item.user__username }}">@{{ item.user__username }} </a><br><br>
-                <p>{{ item.user__first_name }} {{item.user__last_name}}</p>
+            {% endfor %}
             </div>
         </div>
     </div>
-</div>
-{% endfor %}
-</div>
 </div>
 {% endblock %}
 {% block extra-js %}
