--- a/skyfolk/templates/account/cf-pincode.html
+++ b/skyfolk/templates/account/cf-pincode.html
@@ -15,7 +15,7 @@
 </div>
 {% endblock %}
 {% block cf-form %}
-    <div class="col-lg-12 col-md-12 col-sm-12 wrapper-profilex">
+    <div class="col l12 m12 s12 wrapper-profilex">
         <div class="personal-code">
             <p id="pincode" class="pin-code">{{ pin }}</p>
             <button id="show-code" class="show-personal-code">ver pincode</button>
