--- a/avatar/templates/avatar/add.html
+++ b/avatar/templates/avatar/add.html
@@ -15,7 +15,7 @@
 {% endblock %}
 
 {% block cf-form %}
-<div id="change-avatar" class="col-lg-12 col-md-10 col-sm-12 current-avatar">
+<div id="change-avatar" class="col l12 m10 s12 current-avatar">
     <p>{% trans "Your current avatar: " %}</p>
 	{% if avatars %}
 	<a href="{% url 'avatar_change' %}">
@@ -26,7 +26,7 @@
 	{% endif %}
 		<a title="Eliminar imágenes de perfil" href="{% url 'avatar_delete' %}" class="delete-profile-image"><i class="fa fa-trash"></i></a>
 </div>
-    <div id="option-avatar" class="col-lg-12 col-md-12 col-sm-12 options-avatar">
+    <div id="option-avatar" class="col l12 m12 s12 options-avatar">
     {% if not avatars %}
         <p>{% trans "You haven't uploaded an avatar yet. Please upload one now." %}</p>
     {% endif %}
@@ -35,5 +35,5 @@
         <p>{% csrf_token %}<input type="submit" value="{% trans "Upload New Image" %}" /></p>
     </form>
     </div>
-    </div>
+
 {% endblock %}
