--- a/avatar/templates/avatar/change.html
+++ b/avatar/templates/avatar/change.html
@@ -30,7 +30,7 @@ $(document).ready(function() {
 {% endblock %}
 
 {% block cf-form %}
-    <div class="col-lg-12 col-md-10 col-sm-12 current-avatar">
+    <div class="col l12 m10 s12 current-avatar">
     <p>{% trans "Your current avatar: " %}</p>
     {% avatar user %}
     <a title="Eliminar imágenes de perfil" href="{% url 'avatar_delete' %}" class="delete-profile-image"><i class="fa fa-trash"></i></a>
@@ -39,7 +39,7 @@ $(document).ready(function() {
     {% if not avatars %}
         <p>{% trans "You haven't uploaded an avatar yet. Please upload one now." %}</p>
     {% else %}
-        <div id="option-avatar" class="col-lg-12 col-md-12 col-sm-12 options-avatar">
+        <div id="option-avatar" class="col l12 m12 s12 options-avatar">
         <form method="POST" action="{% url 'avatar_change' %}">
             <ul>
                 {{ primary_avatar_form.as_ul }}
