--- a/avatar/templates/avatar/confirm_delete.html
+++ b/avatar/templates/avatar/confirm_delete.html
@@ -25,7 +25,7 @@ $(document).ready(function() {
 </div>
 {% endblock %}
 {% block cf-form %}
-<div id="delete-avatar" class="col-lg-12 col-md-10 col-sm-12 current-avatar">
+<div id="delete-avatar" class="col l12 m10 s12 current-avatar">
     <div class="delete-avatars">
     {% if avatars %}
     <p>{% trans "Please select the avatars that you would like to delete." %}</p>
