--- a/skyfolk/static/css/avatar.css
+++ b/skyfolk/static/css/avatar.css
@@ -1,2 +1,175 @@
-.delete-profile-image,.add-profile-image{font-size:2em}.delete-profile-image .fa-trash,.delete-profile-image .fa-plus,.add-profile-image .fa-trash,.add-profile-image .fa-plus{color:#555;padding:7px;transition:all 0.2s ease-out 0s}.delete-profile-image .fa-trash,.add-profile-image .fa-trash{float:left;margin-left:7px}.delete-profile-image .fa-trash:hover,.add-profile-image .fa-trash:hover{color:tomato}.delete-profile-image .fa-plus,.add-profile-image .fa-plus{float:right;margin-right:7px}.delete-profile-image .fa-plus:hover,.add-profile-image .fa-plus:hover{color:#1e88e5}.wrapper-p .current-avatar{box-shadow:0 1px 5px rgba(0,0,0,0.15);min-height:30%;height:auto;padding:10px;font-size:1.4em}.wrapper-p .current-avatar #id_choices li{width:100%}.wrapper-p .current-avatar img,.wrapper-p .current-avatar p{margin:30px auto 0 auto;text-align:center;display:block}.wrapper-p .current-avatar p{margin-bottom:20px;border-bottom:2px solid #bdbdbd;padding:5px;width:80%}.wrapper-p .current-avatar img{box-shadow:0 1px 2px #1e88e5}.wrapper-p .options-avatar{box-shadow:0 1px 5px rgba(0,0,0,0.15);height:auto;padding:10px;margin-top:15%;font-size:1.4em}.wrapper-p .options-avatar input[type="radio"]{display:none}.wrapper-p .options-avatar #id_avatar{overflow:hidden;padding:7px}.wrapper-p .options-avatar #id_avatar::-webkit-file-upload-button{visibility:hidden}.wrapper-p .options-avatar #id_avatar:before{content:"";display:inline-block;white-space:nowrap;-webkit-user-select:none}.wrapper-p .options-avatar label[for="id_avatar"]{display:none}.wrapper-p .options-avatar img,.wrapper-p .options-avatar label{position:relative;display:inline-block}.wrapper-p .options-avatar img{margin-left:30px}.wrapper-p .options-avatar label{margin-bottom:20px}.wrapper-p .options-avatar ul{border-radius:3px}.wrapper-p .options-avatar ul li{margin-left:15px;margin-right:15px;padding:5px;display:inline-block}.wrapper-p .options-avatar input{border:medium none;border-radius:2px;display:inline-block;height:36px;line-height:36px;padding:0px 2rem;text-transform:uppercase;text-decoration:none;color:#1e88e5;background-color:transparent;text-align:center;letter-spacing:0.5px;transition:all 0.2s ease-out 0s;cursor:pointer;float:right;outline:none}.wrapper-p .options-avatar input:hover{opacity:0.8;background-color:#eee}.wrapper-p .options-avatar input[type="submit"]{float:left}.active{border:4px solid #1e88e5}.delete-avatars input[type="checkbox"]{display:none}.delete-avatars img,.delete-avatars label{position:relative}.delete-avatars img{margin-left:30px}.delete-avatars label{margin-bottom:20px}.delete-avatars ul{border-radius:3px}.delete-avatars ul li{padding:5px}.delete-avatars input{border:medium none;border-radius:2px;display:inline-block;height:36px;line-height:36px;margin-top:15px;padding:0px 2rem;text-transform:uppercase;text-decoration:none;color:#1e88e5;background-color:transparent;text-align:center;letter-spacing:0.5px;transition:all 0.2s ease-out 0s;cursor:pointer;float:right;outline:none}.delete-avatars input:hover{opacity:0.8;background-color:#eee}#id_avatar{overflow:hidden;padding:7px}#id_avatar::-webkit-file-upload-button{visibility:hidden}#id_avatar::-webkit-file-upload-button:before{content:"";display:inline-block;white-space:nowrap;-webkit-user-select:none}#id_avatar label[for="id_avatar"]{display:none}
+.delete-profile-image,
+.add-profile-image {
+  font-size: 2em; }
+  .delete-profile-image .fa-trash,
+  .delete-profile-image .fa-plus,
+  .add-profile-image .fa-trash,
+  .add-profile-image .fa-plus {
+    color: #555;
+    padding: 7px;
+    transition: all 0.2s ease-out 0s; }
+  .delete-profile-image .fa-trash,
+  .add-profile-image .fa-trash {
+    float: left;
+    margin-left: 7px; }
+    .delete-profile-image .fa-trash:hover,
+    .add-profile-image .fa-trash:hover {
+      color: #ff6347; }
+  .delete-profile-image .fa-plus,
+  .add-profile-image .fa-plus {
+    float: right;
+    margin-right: 7px; }
+    .delete-profile-image .fa-plus:hover,
+    .add-profile-image .fa-plus:hover {
+      color: #1e88e5; }
+
+.wrapper-p .current-avatar {
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
+  min-height: 30%;
+  height: auto;
+  padding: 10px;
+  font-size: 1.4em; }
+  .wrapper-p .current-avatar #id_choices li {
+    width: 100%; }
+  .wrapper-p .current-avatar img,
+  .wrapper-p .current-avatar p {
+    margin: 30px auto 0 auto;
+    text-align: center;
+    display: block; }
+  .wrapper-p .current-avatar p {
+    margin-bottom: 20px;
+    border-bottom: 2px solid #bdbdbd;
+    padding: 5px;
+    width: 80%; }
+  .wrapper-p .current-avatar img {
+    box-shadow: 0 1px 2px #1e88e5; }
+.wrapper-p .options-avatar {
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
+  height: auto;
+  padding: 10px;
+  margin-top: 15%;
+  font-size: 1.4em; }
+  .wrapper-p .options-avatar input[type="radio"] {
+    display: none; }
+  .wrapper-p .options-avatar #id_avatar {
+    overflow: hidden;
+    padding: 7px; }
+    .wrapper-p .options-avatar #id_avatar::-webkit-file-upload-button {
+      visibility: hidden; }
+    .wrapper-p .options-avatar #id_avatar:before {
+      content: "";
+      display: inline-block;
+      white-space: nowrap;
+      -webkit-user-select: none; }
+  .wrapper-p .options-avatar label[for="id_avatar"] {
+    display: none; }
+  .wrapper-p .options-avatar img, .wrapper-p .options-avatar label {
+    position: relative;
+    display: inline-block; }
+  .wrapper-p .options-avatar img {
+    margin-left: 30px; }
+  .wrapper-p .options-avatar label {
+    margin-bottom: 20px; }
+  .wrapper-p .options-avatar ul {
+    border-radius: 3px; }
+    .wrapper-p .options-avatar ul li {
+      margin-left: 15px;
+      margin-right: 15px;
+      padding: 5px;
+      display: inline-block; }
+  .wrapper-p .options-avatar input {
+    border: medium none;
+    border-radius: 2px;
+    display: inline-block;
+    height: 36px;
+    line-height: 36px;
+    padding: 0px 2rem;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #1e88e5;
+    background-color: transparent;
+    text-align: center;
+    letter-spacing: 0.5px;
+    transition: all 0.2s ease-out 0s;
+    cursor: pointer;
+    float: right;
+    outline: none; }
+    .wrapper-p .options-avatar input:hover {
+      opacity: 0.8;
+      background-color: #eee; }
+  .wrapper-p .options-avatar input[type="submit"] {
+    float: left; }
+
+.active {
+  border: 4px solid #1e88e5;
+  /* DELETE AVATAR */ }
+
+.delete-avatars input[type="checkbox"] {
+  display: none; }
+.delete-avatars img, .delete-avatars label {
+  position: relative; }
+.delete-avatars img {
+  margin-left: 30px; }
+.delete-avatars label {
+  margin-bottom: 20px; }
+.delete-avatars ul {
+  border-radius: 3px; }
+  .delete-avatars ul li {
+    padding: 5px; }
+.delete-avatars input {
+  border: medium none;
+  border-radius: 2px;
+  display: inline-block;
+  height: 36px;
+  line-height: 36px;
+  margin-top: 15px;
+  padding: 0px 2rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #1e88e5;
+  background-color: transparent;
+  text-align: center;
+  letter-spacing: 0.5px;
+  transition: all 0.2s ease-out 0s;
+  cursor: pointer;
+  float: right;
+  outline: none; }
+  .delete-avatars input:hover {
+    opacity: 0.8;
+    background-color: #eee; }
+
+/* IF AVATAR EMPTY */
+#id_avatar {
+  overflow: hidden;
+  padding: 7px;
+  /*& input
+   * background-color: transparent
+   * border: medium none
+   * border-radius: 2px
+   * display: inline-block
+   * cursor: pointer
+   * height: 36px
+   * color: $blueskyfolk
+   * line-height: 36px
+   * margin-top: 15px
+   * letter-spacing: .5px
+   * text-align: center
+   * padding: 0 2rem
+   * outline: none
+   * transition: $default-transition
+   * text-transform: uppercase
+   * text-decoration: none
+   *
+   * &:hover
+   *   background-color: $whitewithopacity */ }
+  #id_avatar::-webkit-file-upload-button {
+    visibility: hidden; }
+    #id_avatar::-webkit-file-upload-button:before {
+      content: "";
+      display: inline-block;
+      white-space: nowrap;
+      -webkit-user-select: none; }
+  #id_avatar label[for="id_avatar"] {
+    display: none; }
+
 /*# sourceMappingURL=avatar.css.map */
