--- a/skyfolk/static/sass/profile.sass
+++ b/skyfolk/static/sass/profile.sass
@@ -80,14 +80,14 @@ $followcolor: #64b5f6
 
 /* Ventana para las opciones de cada pin */
 
-* .ventana-pin
+.ventana-pin
   width: 100%
   height: auto
   display: none
   border-radius: 3px
 
 
-* .ventana-pin a
+.ventana-pin a
   float: right
   font-size: 17px
   margin-right: 14px
