--- a/skyfolk/templates/account/cf-profile.html
+++ b/skyfolk/templates/account/cf-profile.html
@@ -32,7 +32,7 @@
         <a title="Subir imágenes de perfil" href="{% url 'avatar_add' %}" class="add-profile-image"><i class="fa fa-plus"></i></a>
 		</div>
 		</div>
-		<div class="index-wrapper">
+		<div class="col l12 m12 s12 index-wrapper">
 				<div class="nameConfig">
 				<p>{{ user_form.first_name.errors}}</p>
 				<p>¿Como te llamas?</p>
@@ -53,14 +53,9 @@
 					<p>Introduce un estado ;-).</p>
 					<p>{{ perfil_form.status }}</p>
 				</div>
-				<div class="menu-usr">
-					<p>{{ perfil_form.hiddenMenu.errors }}</p>
-					<p>Menu estático</p>
-					<p>{{ perfil_form.hiddenMenu }}</p>
-				</div>
 		</div>
 			</div>
-				<button class="btn btn-info" id="boton-perfil" type="submit">Salvar cambios</button>
+				<button class="btn btn-info right blue darken-1" id="boton-perfil" type="submit">Salvar cambios</button>
 		</div>
 	</form>
 	{% comment %}
