--- a/skyfolk/templates/account/email.html
+++ b/skyfolk/templates/account/email.html
@@ -51,9 +51,9 @@
       {% endfor %}
 
     <div class="buttonHolder">
-          <button class="secondaryAction" type="submit" name="action_primary" >{% trans 'Make Primary' %}</button>
-          <button class="secondaryAction" type="submit" name="action_send" >{% trans 'Re-send Verification' %}</button>
-          <button class="primaryAction" type="submit" name="action_remove" >{% trans 'Remove' %}</button>
+          <button class="btn secondaryAction" type="submit" name="action_primary" >{% trans 'Make Primary' %}</button>
+          <button class="btn secondaryAction" type="submit" name="action_send" >{% trans 'Re-send Verification' %}</button>
+          <button class="btn primaryAction" type="submit" name="action_remove" >{% trans 'Remove' %}</button>
     </div>
 
     </fieldset>
@@ -66,7 +66,7 @@
         <form method="post" action="{% url 'account_email' %}" class="add_email">
             {% csrf_token %}
             {{ form.as_p}}
-            <button name="action_add" type="submit">{% trans "Add E-mail" %}</button>
+            <button class="waves-effect waves-light btn" name="action_add" type="submit">{% trans "Add E-mail" %}</button>
         </form>
 {% endblock %}
 
