--- a/skyfolk/templates/account/password_change.html
+++ b/skyfolk/templates/account/password_change.html
@@ -16,11 +16,11 @@
 
 
 {% block cf-form %}
-<div class="col-lg-12 col-md-12 col-sm-12 wrapper-profilex">
+<div class="col l12 m12 s12 wrapper-profilex">
 	  <form method="POST" id="form-changepass" action="{% url 'account_change_password' %}" class="password_change">
         {% csrf_token %}
         {{ form.as_p }}
-        <button class="btn btn-info" id="btn" type="submit" name="action">{% trans "Change Password" %}</button>
+        <button class="btn btn-info right blue darken-1 btn-password" type="submit" name="action">{% trans "Change Password" %}</button>
     </form>
 	</div>
 {% endblock %}
