--- a/skyfolk/templates/account/pin-right-top.html
+++ b/skyfolk/templates/account/pin-right-top.html
@@ -3,11 +3,11 @@
 {% endcomment %}
 <div class="col l6 m12 s12">
         <div class="stock card">
-            <nav class="ventana-pin">
+            <div class="ventana-pin">
               <a><i class="fa fa-times"></i></a>
               <a><i class="fa fa-expand"></i></a>
               <a><i class="fa fa-thumb-tack"></i></a>
-          </nav>
+            </div>
                   <!-- Widget encuestas -->
          <div class="wrapper">
             <div class="widget-wr">
