--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -62,13 +62,13 @@
   <div class="col l4 m6 s12">
     <div class="container">
       <div class="col l12 m12 s12">
-         <nav class="ventana-pin">
-           <a><i class="fa fa-times"></i></a>
-           <a><i class="fa fa-expand"></i></a>
-           <a><i class="fa fa-thumb-tack"></i></a>
-         </nav>
       <div id="div-separator">
         <div class="sidebar card" id="tab-container">
+            <div class="ventana-pin">
+               <a><i class="fa fa-times"></i></a>
+               <a><i class="fa fa-expand"></i></a>
+               <a><i class="fa fa-thumb-tack"></i></a>
+            </div>
           <ul class="unstyled table fullwidth links">
             <li class="tab" id="li-tab-timeline"><a href="#tab-timeline">timeline</a></li>
 	        <li class="tab" id="li-tab-comentarios"><a href="#tab-comentarios">Comentarios</a></li>
