--- a/skyfolk/templates/account/search.html
+++ b/skyfolk/templates/account/search.html
@@ -9,104 +9,106 @@
 {% block content %}
 
 <div class="container">
-<div class="col-lg-12 col-md-10 col-sm-12">
-  {% if resultSearch|length == 0 and resultMessages|length == 0 %}
-  <div class="col-sm-4">
-  	   <div class="noelements-search" id="search-noelements">
-         <h5 class="">Sin resultados :-(</h5>
-         <i class="not-query">No se obtuvo ningún resultado para:
-           {% for word in words %}
-            {{ word }}
-           {% endfor %}
-        </i>
-      </div>
-    </div>
-  {% else %}
-      <div class="col-lg-12 col-md-12 col-sm-12">
-        <ul class="query-options">
-            <li class="list-vertical">Destacados</li>
-            <li class="list-vertical"><a href="/search/1">Cuentas</a></li>
-            <li class="list-vertical"><a href="/search/2">Publicaciones</a></li>
-            <li class="list-vertical">Imágenes</li>
-            <li class="list-vertical">Videos</li>
-            <li class="list-vertical">Más opciones <i class="fa fa-caret-down" aria-hidden="true"></i>
-                <div id="dropdown-search" class="dropdown-options">
-                    <ul class="dropdown-ul">
-                        <li>Todo</li>
-                        <li>Nuevo</li>
-                        <li>De todos</li>
-                        <li>Personas que sigues</li>
-                        <li>Personas que te siguen</li>
-                        <li id="search-advanced">Búsqueda avanzada</li>
-                    </ul>
-                </div>
-            </li>
-        </ul>
-    </div>
-    {% if resultSearch|length != 0 %}
-  <h2 class="account-search">Cuentas</h2>
-  {% for item in resultSearch %}
-<div class="col-lg-3 col-md-5 col-sm-12">
-    <div class="personal-card">
-        <div class="col-lg-12">
-            <div class="header">
-                {% if item.profile.backImage %}
-                <img class="back-profile-user" src="{{ item.profile.backImage.url }}">
-                   {% else %}
-                   <img class="back-profile-user" src="{{ STATIC_URL }}img/nuevo_back.png">
-                {% endif %}
-                <i class="fa fa-user fa-2x like-him">
+    <div class="row">
+    <div class="col l12 m10 s12">
+      {% if resultSearch|length == 0 and resultMessages|length == 0 %}
+          <div class="col s4">
+               <div class="noelements-search" id="search-noelements">
+                 <h5 class="">Sin resultados :-(</h5>
+                 <i class="not-query">No se obtuvo ningún resultado para:
+                   {% for word in words %}
+                    {{ word }}
+                   {% endfor %}
                 </i>
-                <div class="bg-user">
-                    <div onclick="location.href='/profile/{{ item.username }}'" class="profile-user-bg">{% avatar item %}</div>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-12">
-            <div class="name-friend">
-            <p>{{ item.username }}</p><br>
-                <p>{{ item.first_name }} {{item.last_name}}</p>
-            </div>
-
-        </div>
-    </div>
-</div>
-{% endfor %}
-    </div>{% endif %}
- {% endif %}
-    {% if resultMessages|length != 0 %}
-    <div class="col-lg-12 col-md-10 col-sm-12">
-    <h2 class="messages-search">Publicaciones</h2>
-    {% for pub in resultMessages %}
-        {% if user.username|check_follow:pub.author.username and not user.username|check_blocked:pub.author.username %} {% comment 'Check privacity' %} Comprobamos la privacidad del autor del mensaje {% endcomment %}
-   <div class="col-lg-3 col-md-5 col-sm-12 pub-search">
-    <div class="personal-card">
-        <div class="col-lg-12">
-            <div class="header">
-                {% if pub.author.profile.backImage %}
-                   <img class="back-profile-user" src="{{ pub.author.profile.backImage.url }}">
-                   {% else %}
-                   <img class="back-profile-user" src="{{ STATIC_URL }}img/nuevo_back.png">
-                {% endif %}
-                <div class="bg-user">
-                    <div onclick="location.href='/profile/{{ pub.author.username }}'" class="profile-user-bg">{% avatar pub.author %}</div>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-12">
-            <div class="col-lg-12 col-md-12 col-sm-12 pub-author">
-                <a href="/profile/{{ pub.author.username }}">@{{ pub.author.username }}</a>
-                <i> ({{ pub.author.first_name}} {{ pub.author.last_name }})</i>
               </div>
-            <div class="col-lg-12 col-md-12 col-sm-12 comm">
-                    <p class="pub-content">{{ pub.content|safe }}</p>
+            </div>
+          {% else %}
+              <div class="col l12 m12 s12">
+                <ul class="query-options">
+                    <li class="list-vertical">Destacados</li>
+                    <li class="list-vertical"><a href="/search/1">Cuentas</a></li>
+                    <li class="list-vertical"><a href="/search/2">Publicaciones</a></li>
+                    <li class="list-vertical">Imágenes</li>
+                    <li class="list-vertical">Videos</li>
+                    <li class="list-vertical">Más opciones <i class="fa fa-caret-down" aria-hidden="true"></i>
+                        <div id="dropdown-search" class="dropdown-options">
+                            <ul class="dropdown-ul">
+                                <li>Todo</li>
+                                <li>Nuevo</li>
+                                <li>De todos</li>
+                                <li>Personas que sigues</li>
+                                <li>Personas que te siguen</li>
+                                <li id="search-advanced">Búsqueda avanzada</li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            {% if resultSearch|length != 0 %}
+          <h2 class="account-search">Cuentas</h2>
+          {% for item in resultSearch %}
+        <div class="col l3 m5 s12">
+            <div class="personal-card">
+                <div class="col-lg-12">
+                    <div class="header">
+                        {% if item.profile.backImage %}
+                        <img class="back-profile-user" src="{{ item.profile.backImage.url }}">
+                           {% else %}
+                           <img class="back-profile-user" src="{{ STATIC_URL }}img/nuevo_back.png">
+                        {% endif %}
+                        <i class="fa fa-user fa-2x like-him">
+                        </i>
+                        <div class="bg-user">
+                            <div onclick="location.href='/profile/{{ item.username }}'" class="profile-user-bg">{% avatar item %}</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col ll2">
+                    <div class="name-friend">
+                    <p>{{ item.username }}</p><br>
+                        <p>{{ item.first_name }} {{item.last_name}}</p>
+                    </div>
+
+                </div>
             </div>
         </div>
+        {% endfor %}
+            </div>{% endif %}
+         {% endif %}
+            {% if resultMessages|length != 0 %}
+            <div class="col l12 m10 s12">
+            <h2 class="messages-search">Publicaciones</h2>
+            {% for pub in resultMessages %}
+                {% if user.username|check_follow:pub.author.username and not user.username|check_blocked:pub.author.username %} {% comment 'Check privacity' %} Comprobamos la privacidad del autor del mensaje {% endcomment %}
+           <div class="col l3 m5 s12 pub-search">
+            <div class="personal-card">
+                <div class="col l12">
+                    <div class="header">
+                        {% if pub.author.profile.backImage %}
+                           <img class="back-profile-user" src="{{ pub.author.profile.backImage.url }}">
+                           {% else %}
+                           <img class="back-profile-user" src="{{ STATIC_URL }}img/nuevo_back.png">
+                        {% endif %}
+                        <div class="bg-user">
+                            <div onclick="location.href='/profile/{{ pub.author.username }}'" class="profile-user-bg">{% avatar pub.author %}</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col l12">
+                    <div class="col l12 m12 s12 pub-author">
+                        <a href="/profile/{{ pub.author.username }}">@{{ pub.author.username }}</a>
+                        <i> ({{ pub.author.first_name}} {{ pub.author.last_name }})</i>
+                      </div>
+                    <div class="col l12 m12 s12 comm">
+                            <p class="pub-content">{{ pub.content|safe }}</p>
+                    </div>
+                </div>
+            </div>
+        </div>{% endif %}
+        {% endfor %}
+         {% endif %}
+         </div>
+            <script async src="{{STATIC_URL}}js/search.js"></script>
+        {% endblock %}
     </div>
-</div>{% endif %}
-{% endfor %}
- {% endif %}
- </div>
-    <script async src="{{STATIC_URL}}js/search.js"></script>
-{% endblock %}
 </div>
