--- a/skyfolk/templates/account/verification_sent.html
+++ b/skyfolk/templates/account/verification_sent.html
@@ -34,13 +34,13 @@
 {% block barra_navegacion %}{% comment %} No debe aparecer, ya que no estamos registrados aun {% endcomment %}{% endblock %}
 
 {% block content %}
-    <div class="col-lg-12 col-sm-12 col-md-12">
+    <div class="col l12 s12 m12">
         <div class="container">
-            <div class="col-lg-12 col-sm-12 col-md-12 hgroup">
+            <div class="col l12 s12 m12 hgroup">
                 <h4 class="cn"> Email </h4>
                 <h6 class="ch"> {% trans "Verify Your E-mail Address" %} </h6>
             </div>
-            <div class="col-lg-12 col-sm-12 col-md-12 email-info">
+            <div class="col l12 s12 m12 email-info">
                 <h1><i class="fa fa-envelope-o" aria-hidden="true"></i> {% trans "Verify Your E-mail Address" %}</h1>
                 <br><br>
                 <p class="information-text">
